🔧 PROGRESS: PHASE 5 TODOs Resolution
✅ RÉSOLUS (8 TODOs):
- Suppression 2 handlers stubs Yeast inutilisés
- 4 TODOs AdminMaltsController → redirections vers nouveaux endpoints
- 2 TODOs MaltPublicController → implémentation suggestions & facettes

✅ AJOUTS:
- Event Store custom (alternative pg-event-store)
- pg-event-store officiel intégré et fonctionnel
- Méthodes buildSearchSuggestions & buildMaltFacets complètes

🎯 RESTANT: ~100 TODOs à traiter
🏗️ Architecture: Event Sourcing unifié opérationnel

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>